--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,14 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+
+
+
+/* @import "tailwindcss";
 
 :root {
   --background: #ffffff;
@@ -23,4 +33,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
